# ki-essensplaner

./: .env.example  .gitignore  LICENSE  PRD.md  README.md  hacs.json  pyproject.toml  repository.json
.codex/: codebase-overview.md
addons/ki_essensplaner/: DOCS.md  Dockerfile  run.sh
custom_components/ki_essensplaner/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/ki_essensplaner/translations/: de.json
data/local/: seasonal_ingredients.json
ki_essensplaner/: DOCS.md  Dockerfile  config.yaml  requirements.txt  run.sh
ki_essensplaner/src/agents/: models.py  recipe_search_agent.py
ki_essensplaner/src/api/: __main__.py  (+2 more)
scripts/: migrate_add_servings.py  test_issue_27.py  test_issue_28.py  test_issue_29.py  test_issue_30.py  test_issue_31.py  test_issue_31_wip.py
src/agents/: __init__.py  models.py  recipe_search_agent.py
src/api/: __init__.py  __main__.py  config.py  main.py
src/core/: config.py  database.py  user_config.py
src/importers/: onenote.py
src/models/: recipe.py
src/profile/: ingredient_categorizer.py  ingredient_parser.py  normalize_ingredients.py  preference_profile.py
src/scoring/: __init__.py  recipe_scorer.py  seasonality.py
src/scrapers/: bioland_huesgen.py  eatsmarter_search.py  familienkost.py  recipe_fetcher.py  test_eatsmarter.py
src/shopping/: __init__.py  shopping_list.py
tests/: test_config_api_models.py  test_recipe_rotation.py  test_seasonal_key_ingredients.py  test_user_config_rotation.py
www/ki-essensplaner/: weekly-plan-card.js
(+43 files in other folders)
