[project]
name = "ki-essensplaner"
version = "0.2.0"
description = "KI-Agent für personalisierte Wochenpläne basierend auf OneNote-Import und Rezept-Scraping"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "sourcesavant" }
]

dependencies = [
    "recipe-scrapers>=15.0.0",
    "requests>=2.31.0",
    "msal>=1.28.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
